styles/modal-settings.less
.atom-launcher-modal-settings {
    top: 0!important;
    border-top-left-radius: 0!important;
    border-top-right-radius: 0!important;
    width: 800px !important;
    max-width: 800px !important;
    height: 500px;
    padding: 0 !important;

    > div {
        height: 100%;
    }

    .modal-bottom {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        padding: 10px;
        background-color: #282c34;
        border-top: 1px solid #1a1d22;
        text-align: right;

        .btn {
            margin: 0 5px;
        }
    }

    .select-list {
        position: absolute;
        top: 0;
        bottom: 47px;
        width: 250px;
        overflow: auto;

        ol.list-group {
            margin: 0 !important;

            li {
                cursor: pointer;
                transition: all 0.3s;

                &:hover {
                    background-color: #31363f;
                }
            }
        }
    }

    .settings-content {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 47px;
        left: 249px;
        border-left: 1px solid #1a1d22;
    }

    .settings-form {
        padding: 10px;

        div.row {
            margin-bottom: 5px;
            overflow: auto;

            div.col-label {
                float: left;
                width: 40%;
                padding: 0 10px;
                line-height: 26px;
            }
            div.col-input {
                float: left;
                width: 60%;
                padding: 0 10px;
            }
            div.col-env-name {
                float: left;
                width: 45%;
                padding: 0 10px 0 30px;
            }
            div.col-env-value {
                float: left;
                width: 45%;
                padding: 0 10px;
            }
            div.col-env-delete {
                float: left;
                width: 10%;
            }
        }
    }
}

